tools/kubernetes/deployment-cron.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pingspace-cron
  namespace: pingspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingspace-cron

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: pingspace-cron
    spec:
      containers:
      - name: cron
        image: your-docker-image
        imagePullPolicy: Always
      imagePullSecrets:
      - name: docker-auth
