tools/kubernetes/deployment-mysql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pingspace-mysql
  namespace: pingspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingspace-mysql

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: pingspace-mysql
    spec:
      containers:
      - name: mysql
        image:  quay.io/continuouspipe/mysql5.7:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: pingspace-mysql
  name: pingspace-mysql
  namespace: pingspace
spec:
  ports:
  - port: 3306
  selector:
    name: pingspace-mysql
