tools/kubernetes/deployment-redis.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pingspace-redis
  namespace: pingspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingspace-redis

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: pingspace-redis
    spec:
      containers:
      - name: redis
        image:  quay.io/continuouspipe/redis3:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: pingspace-redis
  name: pingspace-redis
  namespace: pingspace
spec:
  ports:
  - port: 6379
  selector:
    name: pingspace-redis
